force-app/main/default/objects/MPM4_BASE__Risk__c/MPM4_BASE__Risk__c.object-meta.xml
<CustomObject>
    <label>Risk</label>
    <nameField>
        <displayFormat>RSK-{000000}</displayFormat>
        <label>Risk ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>