force-app/main/default/objects/MPM4_BASE__Risk__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Does this risk apply to a specific application? If so, link it here.</description>
    <inlineHelpText>Does this risk apply to a specific application? If so, link it here.</inlineHelpText>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>