force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Contingency_Plan__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Contingency_Plan__c</fullName>
    <inlineHelpText>If the risk actually happens, then what will we do</inlineHelpText>
    <label>Contingency Plan</label>
    <type>TextArea</type>
</CustomField>