force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Mitigation_Plan__c</fullName>
    <inlineHelpText>What is being done to keep the risk from affecting the project.</inlineHelpText>
    <label>Mitigation Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>