force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Next_Steps__c</fullName>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>