force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Program__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>MPM4_BASE__Milestone1_Program__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>