force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Project__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>