force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Risk_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Risk_Closed_Date__c</fullName>
    <label>Risk Closed Date</label>
    <type>Date</type>
</CustomField>