force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Risk_Description__c</fullName>
    <label>Risk Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>