force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Risk_Impact__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Risk_Impact__c</fullName>
    <inlineHelpText>If the risk actually happens, how bad could the impact be financially or otherwise</inlineHelpText>
    <label>Risk Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>