force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Risk_Name__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Risk_Name__c</fullName>
    <label>Risk Name</label>
    <type>TextArea</type>
</CustomField>