force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Risk_Owner__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Risk_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>