force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Risk_Probability__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Risk_Probability__c</fullName>
    <inlineHelpText>What is the likelihood of this risk being realized?</inlineHelpText>
    <label>Risk Probability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>