force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Risk_Status__c</fullName>
    <label>Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>