force-app/main/default/objects/MPM4_BASE__Risk__c/fields/MPM4_BASE__Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Risk_Type__c</fullName>
    <label>Risk Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ROI / Benefits</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Scope</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>