force-app/main/default/objects/MPM4_BASE__Risk__c/listViews/MPM4_BASE__All.listView-meta.xml
<ListView>
    <fullName>MPM4_BASE__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>